--- a/styles/BlogAuthor.module.css
+++ b/styles/BlogAuthor.module.css
@@ -1,17 +1,24 @@
-.authorImage{
- border-radius: 50%;
- width: 64px;
- height:64px;
- object-fit: cover;
- cursor:pointer;
+.outercontainer {
+  /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
+  border-radius: 20px;
+  margin: 5px;
 }
-.authorname{
-  line-height: 16px!important;
-  font-size: 11px!important;
-  margin-top: 5px!important;
-  color: rgba(41, 41, 41, 1)!important;
-  font-weight: 400!important;
-  white-space:nowrap!important;
-  overflow:hidden!important;
-  font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif!important;
+,
+.authorImage {
+  border-radius: 50%;
+
+  width: 64px;
+  height: 64px;
+  object-fit: cover;
+  cursor: pointer;
+}
+.authorname {
+  line-height: 16px !important;
+  font-size: 11px !important;
+  margin-top: 5px !important;
+  color: rgba(41, 41, 41, 1) !important;
+  font-weight: 400 !important;
+  white-space: nowrap !important;
+  overflow: hidden !important;
+  font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif !important;
 }
