--- a/styles/BlogSmallCard.module.css
+++ b/styles/BlogSmallCard.module.css
@@ -1,16 +1,22 @@
 .outercontainer {
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   /* min-width: 350px; */
-  padding-right: 15px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  /* padding-right: 15px; */
+  border-radius: 5px 5px 5px 5px;
   /* padding-left: 15px; */
   cursor: pointer;
+  margin: 0px 10px 10px 10px;
+  /* padding: 10px; */
+  background-color: white;
 }
 .category {
-  margin-right: 10px;
-  padding-top: 5px;
+  /* margin-right: 10px; */
+  /* padding-top: 5px; */
 }
 .left {
   /* padding-left: 20px; */
+  padding: 10px;
 }
 .name {
   font-size: 13px;
@@ -40,7 +46,7 @@
 }
 .title {
   line-height: 20px;
-  font-size: 16px;
+  font-size: 15px;
   font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
   padding: 3px 0px 5px 0px;
   font-weight: 700;
@@ -54,6 +60,12 @@
 }
 .smallFeatureImage {
   height: 100px;
-  object-fit: cover;
-  max-width: 100px;
+  width: 100%;
+  border-radius: 0px 5px 0px 0px;
+  /* height: 100%; */
+  object-fit: fill;
+  /* max-width: 100px; */
+  /* width: 100%;
+  max-width: 250px;
+  max-height: 180px; */
 }
