--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -3,8 +3,12 @@
   /* margin-bottom: 10px; */
   /* padding-bottom: 20px; */
   padding-left: 3%;
-  padding-top: 20px;
+  /* padding-top: 20px; */
   padding-right: 3%;
+  height: 70px;
+  background-color: white;
+  /* border-bottom: 2px solid teal; */
+  margin-bottom: 10px;
 }
 .picture {
   height: 35px;
@@ -32,9 +36,9 @@
     font-size: 40px;
   }
   .outercontainer {
-    padding-bottom: 20px;
+    /* padding-bottom: 20px; */
     padding-left: 9%;
-    padding-top: 20px;
+    /* padding-top: 20px; */
     padding-right: 9%;
   }
 }
@@ -50,7 +54,7 @@
 
 @media (min-width: 767px) {
   .logo {
-    width: 130px;
+    width: 80px;
   }
 }
 @media (max-width: 767px) {
@@ -59,5 +63,6 @@
   }
   .logo {
     width: 80px;
+    height: 100px;
   }
 }
