--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,20 +1,31 @@
-.container{
-
+.container {
 }
-.blogcontainer{
-
+.blogcontainer {
+}
+.line {
+  padding: 10px 10px 0px 0px;
 }
 
-@media (min-width:991px) {
-  .rightside{
+.authorSection {
+  padding: 10px;
+}
+
+.categorySection {
+  padding: 10px;
+  margin-top: 20px;
+}
+
+@media (min-width: 991px) {
+  .rightside {
     padding-left: 25px;
-    border-left: 1px solid rgba(230, 230, 230, 1)
+    border-left: 1px solid rgba(230, 230, 230, 1);
   }
 }
-.title1{
+.title1 {
   text-transform: uppercase;
   /* padding-bottom: 17px; */
-  padding-left: 15px;
+  /* padding-left: 15px; */
+  padding-bottom: 10px;
   line-height: 16px;
   font-weight: 700;
   font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -22,10 +33,12 @@
   color: rgba(41, 41, 41, 1);
   letter-spacing: 0.083em;
 }
-.title3{
+.title3 {
   text-transform: uppercase;
-  padding-bottom: 17px;
-  padding-left: 15px;
+  /* padding-bottom: 17px; */
+  /* padding-left: 15px; */
+  margin-top: 20px;
+  padding-left: 10px;
   line-height: 16px;
   font-weight: 700;
   font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -33,46 +46,46 @@
   color: rgba(41, 41, 41, 1);
   letter-spacing: 0.083em;
 }
-@media (max-width:991px) {
-  .title1{
+@media (max-width: 991px) {
+  .title1 {
     padding-left: 0px;
   }
 }
-.rightContainer{
-    background-color: rgb(250, 250, 250);
-    min-height: 400px;
+.rightContainer {
+  background-color: rgb(250, 250, 250);
+  min-height: 400px;
 }
 
-.field{
+.field {
   padding: 10px;
   font-size: 13px;
   color: grey;
   font-weight: 400;
 }
-.categoryName{
-  font-weight: bold!important;
-  text-transform: capitalize!important;
-  color: rgb(41, 41, 41, 1)!important;
-  padding-left: 15px!important;
-  font-size: 16px!important;
+.categoryName {
+  font-weight: bold !important;
+  text-transform: capitalize !important;
+  color: rgb(41, 41, 41, 1) !important;
+  /* padding-left: 15px !important; */
+  font-size: 16px !important;
 }
-.exploreText{
-  text-transform:uppercase;
-  letter-spacing:0.083em;
-  line-height:16px;
-  font-size:12px;
-  font-weight:700;
-  color:rgba(41, 41, 41, 1);
-  font-family:sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
+.exploreText {
+  text-transform: uppercase;
+  letter-spacing: 0.083em;
+  line-height: 16px;
+  font-size: 12px;
+  font-weight: 700;
+  color: rgba(41, 41, 41, 1);
+  font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-.rc{
+.rc {
   padding-top: 30px;
   text-align: center;
 }
-.ideaIcon{
+.ideaIcon {
   color: #ffc107;
   margin-right: 10px;
 }
-.logo{
+.logo {
   cursor: pointer;
 }
