--- a/styles/global.css
+++ b/styles/global.css
@@ -1,8 +1,8 @@
 html,
 body {
-  /* background-color: lightgrey; */
-  padding: 0;
-  margin: 0;
+  background-color: #f0f2f5;
+  padding: 0px;
+  margin: 0px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
