--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -58,11 +58,14 @@
   }
 }
 @media (max-width: 767px) {
+  .outercontainer {
+    height: 80px;
+  }
   .appname {
     font-size: 30px;
   }
   .logo {
-    width: 80px;
-    height: 100px;
+    width: 100%;
+    height: 90px;
   }
 }
