--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -16,16 +16,8 @@
   border-radius: 50%;
 }
 .appname {
-  /* font-size: 25px;
-  font-family: charter, Georgia, Cambria, "Times New Roman", Times, serif;
-  font-weight: 600;
-  font-family: none;
-  padding-top: 30px; */
-  font-size: 45px;
-  line-height: 60px;
-  margin-top: 0.56em;
-  margin-bottom: -0.27em;
-  letter-spacing: -0.011em;
+  font-size: 20px !important;
+
   font-weight: 600;
   color: rgba(41, 41, 41, 1);
   font-style: normal;
@@ -33,7 +25,7 @@
 }
 @media (min-width: 767px) {
   .appname {
-    font-size: 40px;
+    font-size: 45px;
   }
   .outercontainer {
     /* padding-bottom: 20px; */
@@ -42,6 +34,7 @@
     padding-right: 9%;
   }
 }
+
 .menuitem {
   border: 0px solid black;
 }
@@ -54,7 +47,7 @@
 
 @media (min-width: 767px) {
   .logo {
-    width: 80px;
+    width: 70px;
   }
 }
 @media (max-width: 767px) {
@@ -65,7 +58,7 @@
     font-size: 30px;
   }
   .logo {
-    max-width: 90px;
-    height: 90px;
+    max-width: 80px;
+    height: 80px;
   }
 }
